[gd_scene load_steps=4 format=3 uid="uid://b8a8w5nfrr16x"]

[ext_resource type="Script" uid="uid://dra6rlhln3i45" path="res://scenes/ui/game_ui_timer/game_ui_timer.gd" id="1_23r0d"]
[ext_resource type="PackedScene" uid="uid://bxcdcnb2upyhd" path="res://scenes/ui/victory_screen/victory_screen.tscn" id="2_kfncy"]

[sub_resource type="LabelSettings" id="LabelSettings_23r0d"]
font_size = 32

[node name="game_ui_timer" type="CanvasLayer"]
script = ExtResource("1_23r0d")
victory_screen_scene = ExtResource("2_kfncy")

[node name="game_timer" type="Timer" parent="."]

[node name="count_down_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="margin_container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="label_game_time" type="Label" parent="margin_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "00:00"
label_settings = SubResource("LabelSettings_23r0d")
horizontal_alignment = 1
vertical_alignment = 1
